# goit-pythonweb-hw-03

./: app.py  error.html  index.html  message.html  pyproject.toml  read.html  style.css
src/: error.html  index.html  message.html
storage/: data.json
